--- a/dt-participant-api/pom.xml
+++ b/dt-participant-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dt-service-def</artifactId>
+    <artifactId>dt-participant-api</artifactId>
 
 
 </project>
